Correcting README step

--- a/README.mdx
+++ b/README.mdx
@@ -61,7 +61,7 @@ After installing the module, enable the PayPal Checkout Flow from your Adobe Com
 3. In the left-hand menu of the **Configuration** page, navigate to **Sales** > **Checkout**.
 4. Expand the **Bold Checkout PayPal Integration** section.
 5. If the **Is PayPal Checkout Flow Enabled?** field is set to **No**, click the **Enable** button.
-6. Click **Confirm** in the warning pop-up.
+6. Click **OK** in the confirmation pop-up.
 7. Once the page reloads, **Is PayPal Checkout Flow Enabled?** is set to **Yes**. The flow is successfully enabled for your store.
 
 **NOTE:** The PayPal Checkout Flow uses the `Bold_Checkout` module's "Parallel Checkout" Checkout type. Enabling the PayPal Checkout Flow in the Adobe Commerce admin changes the store's **Bold Checkout Type** to "Parallel".
